--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,35 @@
     <title>NewPortfolio</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <div class="row">
+    <div class="col-12">
+      <nav class="navbar sticky-top navbar-expand-lg">
+        <div class="container">
+          <div class="col-5">
+            <div class="navbar-brand">Jennifer Pazos - Software Engineer</div>
+          </div>
+          <div class="col-7">
+          
+            <ul class="navbar-nav">
+              <li class="nav-item active"><%= link_to "Something", "/something", :class => "nav-link" %></li>
+              <li class="nav-item"><%= link_to "Home", "/", :class => "nav-link" %></li>
+              <li class="nav-item"><%= link_to "About", "/about", :class => "nav-link"%></li>
+            </ul>
+          
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+    
+        <%= yield %>
+    
   </body>
 </html>
