added generic routes to help with layout and made layout changes

--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -3,8 +3,37 @@
         <div class="container">
             <div class="me">
                 <h2>Jennifer Pazos</h2>
-                <h5>Software Engineer</h5>
+                <h5>Coder</h5>
+
+
             </div>
         </div>
     </div>
+</div>
+<div class="container">  
+<div class="row body-cards">
+    <div class="col-5">
+        <div class="card h-100">
+            <div class="card-body">
+                <h5 class="card-title">Blog Posts</h5>
+                
+                
+                </div>
+                
+                
+    </div>
+    <div class="col-2">
+    </div>
+   
+    
+    
+    <div class="col-5">
+        <div class="card h-100">
+            <div class="card-body">
+                <h5 class="card-title">Recent Projects</h5>
+                <p class="card-text"></p>
+            </div>
+        </div>
+    </div>
+ </div>
 </div>
