--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,19 +18,24 @@ div.main {
     background-image: url('/notebook-1280538.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    box-shadow: 
+    
     width: 100%;
+
     height: 400px;
     -webkit-box-shadow: -1px 7px 18px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -1px 7px 18px 0px rgba(0,0,0,0.75);
     box-shadow: -1px 7px 18px 0px rgba(0,0,0,0.75);
 }
-.me {
+.me h1{
     color: #FFF;
-    text-shadow: 4px 4px 5px rgba(0, 0, 0, 1);
+    text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.75);
     margin-top: 100px;
 
 }
-div.me h2 h5 {
-    display: inline-block;
+.me h5 {
+    color: #83868a;
+}
+.body-cards {
+    margin-top: 25px;
+   
 }
