updated landing page

--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -2,9 +2,13 @@
     <div class="col-12 main">
         <div class="container">
             <div class="me">
-                <h2>Jennifer Pazos</h2>
+                <h1>Jennifer Pazos</h1>
                 <h5>Coder</h5>
-
+                <div class="about-me">
+                <p><i>About me</i><br />
+                    I enjoy writing code, crafts, spending time with friends and family, and laughing until I cry. 
+                </p>
+                </div>
 
             </div>
         </div>
@@ -16,10 +20,10 @@
         <div class="card h-100">
             <div class="card-body">
                 <h5 class="card-title">Blog Posts</h5>
+                <p class="card-text">Post 1</p>
                 
-                
-                </div>
-                
+            </div>
+        </div>    
                 
     </div>
     <div class="col-2">
@@ -31,7 +35,7 @@
         <div class="card h-100">
             <div class="card-body">
                 <h5 class="card-title">Recent Projects</h5>
-                <p class="card-text"></p>
+                <p class="card-text">Project 1</p>
             </div>
         </div>
     </div>
