--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,26 +12,12 @@
 
   <body>
   <div class="row">
-    <div class="col-12">
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-        <div class="container">
-          <div class="col-5">
-          </div>
-          <div class="col-7">
-          
-            <ul class="navbar-nav">
-              <li class="nav-item active"><%= link_to "Something", "/something", :class => "nav-link" %></li>
-              <li class="nav-item"><%= link_to "Home", "/", :class => "nav-link" %></li>
-              
-            </ul>
-          
-          </div>
-        </nav>
-      </div>
-    </div>
+    
   </div>
-    
-  <%= yield %>
-    
+  
+  
+    <div class="row main-content">
+      <%= yield %>
+      </div>
   </body>
 </html>
