--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -6,7 +6,7 @@
                 <h5>Coder</h5>
                 <div class="about-me">
                 <p><i>About me</i><br />
-                    I enjoy writing code, crafts, spending time with friends and family, and laughing until I cry. 
+                    <p>I enjoy writing code, crafts, spending time with friends and family, and laughing until I cry. </p>
                 </p>
                 </div>
 
